k8s/url-short-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-short
  labels:
    app: url-short

spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-short
  template:
    metadata:
      labels:
        app: url-short
    spec:
      containers:
        - name: url-short
          image: mjrwt69/url_short
          imagePullPolicy: IfNotPresent
      
          ports:
            - containerPort: 8000
