k8s/url-short-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-short

spec:
  selector:
    app: url-short

  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
