k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: url-short.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: url-short
                port:
                  number: 80
